--- a/index.css
+++ b/index.css
@@ -2,23 +2,24 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	font-family: Graphik , Arial, Helvetica, sans-serif;
+	font-family: Graphik ;
 scroll-behavior: smooth;}
 
 @font-face{font-family:'Graphik';src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Extralight-Web.eot");src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Extralight-Web.eot?#iefix") format("embedded-opentype"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Extralight-Web.woff2") format("woff2"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Extralight-Web.woff") format("woff");font-weight:100;font-display:swap}@font-face{font-family:'Graphik';src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Regular-Web.eot");src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Regular-Web.eot?#iefix") format("embedded-opentype"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Regular-Web.woff2") format("woff2"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Regular-Web.woff") format("woff");font-weight:normal;font-display:swap}@font-face{font-family:'Graphik';src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Medium-Web.eot");src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Medium-Web.eot?#iefix") format("embedded-opentype"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Medium-Web.woff2") format("woff2"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Medium-Web.woff") format("woff");font-weight:600;font-display:swap}@font-face{font-family:'Graphik';src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Semibold-Web.eot");src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Semibold-Web.eot?#iefix") format("embedded-opentype"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Semibold-Web.woff2") format("woff2"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Semibold-Web.woff") format("woff");font-weight:bold;font-display:swap}@font-face{font-family:'Graphik';src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Bold-Web.eot");src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Bold-Web.eot?#iefix") format("embedded-opentype"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Bold-Web.woff2") format("woff2"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Bold-Web.woff") format("woff");font-weight:800;font-display:swap}@font-face{font-family:'Graphik Web';src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Regular-Web.eot");src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Regular-Web.eot?#iefix") format("embedded-opentype"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Regular-Web.woff2") format("woff2"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Regular-Web.woff") format("woff");font-weight:400;font-style:normal;font-stretch:normal}@font-face{font-family:'Graphik Web';src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Medium-Web.eot");src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Medium-Web.eot?#iefix") format("embedded-opentype"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Medium-Web.woff2") format("woff2"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Medium-Web.woff") format("woff");font-weight:500;ascent-override:90%;font-style:normal}@font-face{font-family:'Graphik Web';src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Semibold-Web.eot");src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Semibold-Web.eot?#iefix") format("embedded-opentype"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Semibold-Web.woff2") format("woff2"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/Graphik-Semibold-Web.woff") format("woff");font-weight:600;font-style:normal}@font-face{font-family:'HuluStyle';src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/hulustyle/upright/hulustyle-regular-webfont.woff2") format("woff2"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/hulustyle/upright/hulustyle-regular-webfont.woff") format("woff");font-weight:normal;font-display:swap}@font-face{font-family:'HuluStyle';src:url("https://assetshuluimcom-a.akamaihd.net/FONTS/hulustyle/upright/hulustyle-extrabold-webfont.woff2") format("woff2"),url("https://assetshuluimcom-a.akamaihd.net/FONTS/hulustyle/upright/hulustyle-extrabold-webfont.woff") format("woff");font-weight:800;font-display:swap}
 
 
  .welcome-section-modal{ 
-    background: linear-gradient(178deg, rgb(0 0 0 / 98%) 4.58%, rgba(0,0,0,0) 69.61%),linear-gradient(173deg, rgba(0,0,0,0.2) 4.71%, rgba(0,0,0,0) 71.49%);
- position: relative;
+    background: linear-gradient(182deg, rgb(0 0 0 / 98%) 2.58%, rgba(0,0,0,0) 15.61%),linear-gradient(147deg, rgba(0,0,0,0.2) 8.71%, rgba(0,0,0,0) 84.49%);
+    position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    z-index: -1;
  }
 
  .welcome-section{ 
-height: 100vh;
+    height: 100vh;
 background-image:url('./assets/background-mobile.jpg'),
 linear-gradient(135deg, #231437 0%, #2c385e 50%, #336e6b 100%);
   background-size: cover;
@@ -43,18 +44,27 @@ header > button{
     outline: none;
     font-weight: bold;
     border: none;
+    transition: .5s;
 }
+
+header > button:hover{
+opacity: .7;
+}
+
+header > button:active{
+    opacity: .7;
+    }
 
 .head-content{
 display: flex;
 gap: 25px;
 text-align: center;
 color: white;
+height: 80%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80%;
-    padding: 20px 50px;}
+    padding: 20px 40px;}
 
 .head-content > img {
     height: 55px;
@@ -80,15 +90,21 @@ color: white;
     outline: none;
     font-weight: bold;
     border: none;
+    font-size: 14px;
+    transition: .5s;
 }
 
 .green-btn:hover{
-background:rgb(28 231 131,.4);
+    opacity: .7;
+}
+
+.green-btn:active{
+    opacity: .7;
 }
 
 
 .sec-1{
-    padding:50px 20px 20px;
+    padding:100px 20px 20px;
     background-color:black ;
     color:rgb(228 228 228);  
 }
@@ -119,7 +135,40 @@ background:rgb(28 231 131,.4);
     color: #8b8b8be3;
 }
 
-.sec-1-texts > a{
+.sec-1-texts-two > a{
+    font-size: 12px;
+    text-decoration: none;
+    color: white;
+}
+
+
+.sec-1-texts-two {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+   flex-direction: column;
+   text-align: center;
+   line-height: 20.8px;
+   color: rgb(228 228 228);
+}
+
+.sec-1-texts-two > h3{
+    color: #1CE783;
+        font-size: 16px;
+}
+
+.sec-1-texts-two > h1{
+  font-weight:600 ;
+}
+
+.sec-1-texts-two > span{
+    font-size: 9px;
+    font-weight: 400;
+    color: #8b8b8be3;
+}
+
+.sec-1-texts-two > a{
     font-size: 12px;
     text-decoration: none;
     color: white;
@@ -201,7 +250,7 @@ position: absolute;
 }
 
 .sec-2{
- background-image: url('./assets/bg2.jpg');
+ background-image: url('./assets/bg1-mobile.jpg');
  background-size: cover;
  background-repeat: no-repeat;
 height: 700px;
@@ -302,7 +351,44 @@ padding:20px 50px ;
 
 /* pc */
 @media screen and (min-width:768px){
-   
+
+header{
+    padding: 40px 40px ;
+}
+.welcome-section{ 
+    height: unset;
+background-image:url('./assets/bg.jpg');
+background-size: cover;}
+
+ .head-content{
+    height: unset;
+    padding: 20px 20px 110px;
+    margin: 0 auto;
+    width: 50%;
+ }
+
+ .head-content > h2{
+    font-size: 24px;
+}
+
+ .head-content > img {
+    height: 140px;}
+
+.sec-1-texts-two{
+    width: 60%;
+    padding-top:70px ;
+    margin: 0 auto;
+        gap: 40px;
+    }
+    
+    .sec-1-texts-two > h3{
+            font-size: 18px;
+    }
+    
+    .sec-1-texts-two > h1{
+      font-size: 40px;
+    }
+
 .movie-section {
     flex-direction: row;
 gap:60px}
@@ -312,5 +398,19 @@ gap:60px}
 }
     .movie-genre-box > img {
         max-width: 236px;
+}
+
+.sec-2{
+    background-image: url(./assets/bg1-pc.jpg);
+    justify-content: flex-start;
+    align-items: center;
+}
+.sec-2-container{
+    width: 50%;
+}
+
+.switchTab{
+transform: translateX(80px);
+
 }
 }
